# quantity-and-quality

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml  publish.yml
assets/: app.js  styles.css
data/: README.md  reference_examples.csv  reference_examples.json
docs/: adoption-cookbook.md
examples/: adoption_records.csv  process_heat_comparison.json  quickstart.py  thermal_from_temperatures.csv
scripts/: sync_reference_data.py
src/quantity_quality/: __init__.py  adoption.py  api.py  clean.py  cli.py  core.py  model.py  records.py  reference.py  scenario.py  schema.py  units.py  web_export.py
src/quantity_quality/data/: quantity_quality_record.schema.json  reference_examples.json
tests/: test_core.py
